apps/react-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: react-frontend
  labels:
    app: react-frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: react-frontend
