apps/react-frontend/route-ssh.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: react-frontend-ssh-route
  namespace: react-frontend
  labels:
    app: react-frontend-ssh
spec:
  to:
    kind: Service
    name: react-frontend-ssh-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
