apps/react-frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: react-frontend-route
  namespace: react-frontend
  labels:
    app: react-frontend
spec:
  host: react.apps.p-ai.net
  to:
    kind: Service
    name: react-frontend-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
